Added notification button to MapsActivity and began creating expandable list for Notifications

--- a/MarcoPoloApp/app/src/main/AndroidManifest.xml
+++ b/MarcoPoloApp/app/src/main/AndroidManifest.xml
@@ -52,6 +52,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Notifications"
+            android:label="@string/title_activity_maps"
+            android:theme="@style/AppTheme.ScreenBelow">
+        </activity>
     </application>
 
 </manifest>
