--- a/MarcoPoloApp/build.gradle
+++ b/MarcoPoloApp/build.gradle
@@ -9,6 +9,8 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        //Following dependency is for using Google Services to implement Google+ Sign On
+        classpath 'com.google.gms:google-services:3.0.0'
     }
 }
 
