--- a/MarcoPoloApp/app/build.gradle
+++ b/MarcoPoloApp/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     compile 'com.android.support:multidex:1.0.1'
     testCompile 'junit:junit:4.12'
     compile files('commons-logging-1.2.jar')
+    compile 'com.google.android.gms:play-services-auth:11.0.4'
 }
 
 //Following plugin for implementing Google Play Services for Google+ Sign On
