--- a/MarcoPoloApp/app/src/main/AndroidManifest.xml
+++ b/MarcoPoloApp/app/src/main/AndroidManifest.xml
@@ -40,34 +40,31 @@
 
         <activity
             android:name=".MapsActivity"
-            android:label="@string/title_activity_maps">
-        </activity>
+            android:label="@string/title_activity_maps"></activity>
         <activity
             android:name=".SplashActivity"
             android:label="@string/title_activity_splash"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".AccountSettings"
-            android:label="@string/title_activity_account_settings">
-        </activity>
+            android:label="@string/title_activity_account_settings"></activity>
         <activity
             android:name=".AppSettings"
-            android:label="@string/title_activity_app_settings">
-        </activity>
+            android:label="@string/title_activity_app_settings"></activity>
         <activity
             android:name=".Notifications"
             android:label="@string/title_activity_notifications"
-            android:theme="@style/AppTheme.ScreenBelow">
-        </activity>
+            android:theme="@style/AppTheme.ScreenBelow"></activity>
         <activity
             android:name=".PrivacyPolicy"
-            android:label="@string/title_activity_privacy_policy">
-        </activity>
+            android:label="@string/title_activity_privacy_policy"></activity>
+        <activity android:name=".FriendsList"></activity>
     </application>
 
 </manifest>
