Uploading to fix future merge conflicts -- added David's friend list api

--- a/MarcoPoloApp/app/src/main/AndroidManifest.xml
+++ b/MarcoPoloApp/app/src/main/AndroidManifest.xml
@@ -88,6 +88,8 @@
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".activities.FriendsListActivity"></activity>
     </application>
 
 </manifest>
