--- a/MarcoPoloApp/app/src/main/AndroidManifest.xml
+++ b/MarcoPoloApp/app/src/main/AndroidManifest.xml
@@ -39,57 +39,32 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".activities.MapsActivity"
+            android:name=".MapsActivity"
             android:label="@string/title_activity_maps"></activity>
-
         <activity
-            android:name=".activities.SplashActivity"
-            android:theme="@style/SplashTheme">
+            android:name=".SplashActivity"
+            android:label="@string/title_activity_splash"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
-            android:name=".activities.SettingsActivity"
+            android:name=".AccountSettings"
             android:label="@string/title_activity_account_settings"></activity>
         <activity
-            android:name=".api.notifications.Notifications"
+            android:name=".AppSettings"
+            android:label="@string/title_activity_app_settings"></activity>
+        <activity
+            android:name=".Notifications"
             android:label="@string/title_activity_notifications"
             android:theme="@style/AppTheme.ScreenBelow"></activity>
         <activity
-            android:name=".activities.PrivacyPolicyActivity"
+            android:name=".PrivacyPolicy"
             android:label="@string/title_activity_privacy_policy"></activity>
-
-        <activity
-            android:name=".activities.LoginActivity"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
-
-        <meta-data
-            android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id" />
-
-        <activity
-            android:name="com.facebook.FacebookActivity"
-            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-            android:label="@string/app_name" />
-        <activity
-            android:name="com.facebook.CustomTabActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-
-                <data android:scheme="@string/fb_login_protocol_scheme" />
-            </intent-filter>
-        </activity>
-
-        <activity android:name=".activities.FriendsListActivity"></activity>
+        <activity android:name=".FriendsList"></activity>
     </application>
 
 </manifest>
