Fixed public/private toggle in MarcoActivity.  Merged master in.

--- a/MarcoPoloApp/app/src/main/AndroidManifest.xml
+++ b/MarcoPoloApp/app/src/main/AndroidManifest.xml
@@ -43,7 +43,7 @@
             android:label="@string/title_activity_maps"></activity>
 
         <activity
-            android:name=".MarcoActivity"
+            android:name=".activities.MarcoActivity"
             android:label="Marco"
             android:theme="@style/AppTheme.ScreenBelow"></activity>
         <activity
