--- a/MarcoPoloApp/app/build.gradle
+++ b/MarcoPoloApp/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:multidex:1.0.1'
     testImplementation 'junit:junit:4.12'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
     //compile files('commons-logging-1.2.jar')
 }
 
