--- a/MarcoPoloApp/app/build.gradle
+++ b/MarcoPoloApp/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '26.0.2'
+    buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "com.polo.marco.marcopoloapp"
         minSdkVersion 21
@@ -26,24 +26,24 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
         exclude group: 'commons-logging', module: 'commons-logging'
     })
-    implementation 'com.facebook.android:facebook-login:[4,5)'
-    implementation 'com.amazonaws:aws-android-sdk-core:2.6.0'
-    implementation 'com.amazonaws:aws-android-sdk-s3:2.2.+'
-    implementation 'com.amazonaws:aws-android-sdk-ddb:2.2.+'
-    implementation 'com.amazonaws:aws-android-sdk-ddb-mapper:2.2.+'
-    implementation('com.amazonaws:aws-android-sdk-auth-core:2.6.0@aar') { transitive = true; }
-    implementation 'com.android.support:appcompat-v7:25.3.1'
-    implementation 'com.google.android.gms:play-services-maps:11.0.4'
-    implementation 'com.google.android.gms:play-services-location:11.0.4'
-    implementation 'com.google.android.gms:play-services-auth:11.0.4'
-    implementation 'com.android.support:design:25.3.1'
-    implementation 'com.android.support:cardview-v7:25.3.1'
-    implementation 'com.android.support:gridlayout-v7:25.3.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:multidex:1.0.1'
-    testImplementation 'junit:junit:4.12'
-    implementation 'com.squareup.picasso:picasso:2.5.2'
-    //compile files('commons-logging-1.2.jar')
+    compile 'com.facebook.android:facebook-login:[4,5)'
+    compile 'com.amazonaws:aws-android-sdk-core:2.6.0'
+    compile 'com.amazonaws:aws-android-sdk-s3:2.2.+'
+    compile 'com.amazonaws:aws-android-sdk-ddb:2.2.+'
+    compile 'com.amazonaws:aws-android-sdk-ddb-mapper:2.2.+'
+    compile('com.amazonaws:aws-android-sdk-auth-core:2.6.0@aar') { transitive = true; }
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.google.android.gms:play-services-maps:11.0.4'
+    compile 'com.google.android.gms:play-services-location:11.0.4'
+    compile 'com.google.android.gms:play-services-auth:11.0.4'
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.android.support:gridlayout-v7:25.3.1'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.android.support:multidex:1.0.1'
+    testCompile 'junit:junit:4.12'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile files('commons-logging-1.2.jar')
 }
 
 //Following plugin for implementing Google Play Services for Google+ Sign On
