omg you guys it actually works.  Public/private Marcos pretty much ready to go.  Error checking is all that's left.

--- a/MarcoPoloApp/app/src/main/AndroidManifest.xml
+++ b/MarcoPoloApp/app/src/main/AndroidManifest.xml
@@ -45,7 +45,8 @@
         <activity
             android:name=".activities.MarcoActivity"
             android:label="Marco"
-            android:theme="@style/AppTheme.ScreenBelow"></activity>
+            android:theme="@style/AppTheme.ScreenBelow"
+            android:windowSoftInputMode="adjustPan"></activity>
         <activity
             android:name=".activities.SplashActivity"
             android:theme="@style/SplashTheme">
