--- a/MarcoPoloApp/app/src/main/AndroidManifest.xml
+++ b/MarcoPoloApp/app/src/main/AndroidManifest.xml
@@ -44,6 +44,9 @@
             android:name=".activities.MapsActivity"
             android:label="@string/title_activity_maps"></activity>
 
+        <activity android:name=".activities.HelpActivity"
+                android:label="Help"></activity>
+
         <activity
             android:name=".activities.MarcoActivity"
             android:label="Marco"
