--- a/MarcoPoloApp/app/src/main/AndroidManifest.xml
+++ b/MarcoPoloApp/app/src/main/AndroidManifest.xml
@@ -51,6 +51,12 @@
             android:windowSoftInputMode="adjustPan"></activity>
 
         <activity
+            android:name=".activities.PoloActivity"
+            android:label="Polo"
+            android:theme="@style/AppTheme.ScreenBelow"
+            android:windowSoftInputMode="adjustPan"></activity>
+
+        <activity
             android:name=".activities.SplashActivity"
             android:theme="@style/SplashTheme">
             <intent-filter>
