--- a/MarcoPoloApp/app/src/main/AndroidManifest.xml
+++ b/MarcoPoloApp/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
 
         <activity
             android:name=".activities.MapsActivity"
+            android:theme="@style/AppTheme.ScreenBelow"
             android:label="@string/title_activity_maps"></activity>
 
         <activity
