- Added a bunch of edge cases for Poloing - Created new activity QuickMarcoActivity to appear when clicking map marcos; i.e., you're not sending a polo to public marcos, you're sending them a marco to see if they want to accept it. - Added a bunch of edge cases for poloing

--- a/MarcoPoloApp/app/src/main/AndroidManifest.xml
+++ b/MarcoPoloApp/app/src/main/AndroidManifest.xml
@@ -54,6 +54,13 @@
             android:screenOrientation="portrait"></activity>
 
         <activity
+            android:name=".activities.QuickMarcoActivity"
+            android:label="QuickMarco"
+            android:theme="@style/AppTheme.ScreenBelow"
+            android:windowSoftInputMode="adjustPan"
+            android:screenOrientation="portrait"></activity>
+
+        <activity
             android:name=".activities.PoloActivity"
             android:label="Polo"
             android:theme="@style/AppTheme.ScreenBelow"
